# mcp-raddar

./: .env.example  .gitignore  CHANGELOG.md  CICD_SETUP.md  CLAUDE.md  DOCKER_HUB_README.md  DOCUMENTATION_INDEX.md  Dockerfile  INSTANCE_ID_CHANGES.md  N8N_GUIDE.md  NEW_TOOLS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  pr-checks.yml
src/: config.py  logging_utils.py  server.py
src/clients/: base.py  radarr.py  sonarr.py
src/tools/: radarr_tools.py  sonarr_tools.py
