[project]
name = "mcp-raddar"
version = "0.1.0"
description = "MCP server for Sonarr and Radarr integration"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
    "starlette>=0.45.0",
    "sse-starlette>=2.2.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
]
